[tool.poetry]
name = "django-chat-room"
version = "0.1.0"
description = ""
authors = ["jztchl <kmvishnu625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.4"
channels = "^4.2.2"
channels-redis = "^4.2.1"
daphne = "^4.2.1"
python-dotenv = "^1.1.1"
dj-database-url = "^3.0.1"
psycopg2 = "^2.9.10"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
